Alignment fix

--- a/_sass/components/_gallery.scss
+++ b/_sass/components/_gallery.scss
@@ -30,7 +30,7 @@
     }
     
     li {
-        margin: auto;
+        margin: auto auto 0 auto;
     }
     
     &.gallery-tilt {
